converted all recipe cards to have hover effect, fixed nav layout bug in Safari

--- a/style/sass/partials/_site.scss
+++ b/style/sass/partials/_site.scss
@@ -8,6 +8,17 @@
     clip:auto; height:auto; margin:0; overflow:visible; position:static; width:auto;
   }
 }
+@mixin box-shadow($top, $left, $blur, $color, $inset: false) {
+  @if $inset {
+    -webkit-box-shadow:inset $top $left $blur $color;
+    -moz-box-shadow:inset $top $left $blur $color;
+    box-shadow:inset $top $left $blur $color;
+  } @else {
+    -webkit-box-shadow: $top $left $blur $color;
+    -moz-box-shadow: $top $left $blur $color;
+    box-shadow: $top $left $blur $color;
+  }
+}
 .visually-hidden {
   @include visually-hidden;
 }
@@ -37,7 +48,7 @@ select {
   padding: 5px 80px 5px 10px;
   background: url("#{$images}/select-arrow-3.png") no-repeat right $white;
   border: 0;
-  box-shadow: 0 1px 2px rgba(0,0,0,.35);
+  @include box-shadow( 0, 1px, 2px, rgba( 0, 0, 0, .35 ) );
 }
 input {
   padding: 5px 10px;
@@ -45,7 +56,7 @@ input {
   -moz-appearance:none;
   appearance:none;
   border: 0;
-  box-shadow: 0 1px 2px rgba(0,0,0,.35);
+  @include box-shadow( 0, 1px, 2px, rgba( 0, 0, 0, .35 ) );
 }
 .img-responsive {
   max-width: 100%;
@@ -142,12 +153,12 @@ input {
   }
 }
 
-#main {
-  margin-top: -4%;
-  > section {
-
-  }
-}
+// #main {
+//   margin-top: -4%;
+//   > section {
+//
+//   }
+// }
 .down-arrow {
   position: absolute;
   width: 100%;
@@ -250,7 +261,7 @@ input {
     padding: 0;
   }
   .card {
-    box-shadow: 0 2px 4px rgba(0,0,0,.35);
+    @include box-shadow( 0, 2px, 4px, rgba( 0, 0, 0, .35 ) );
     margin: 12.5px;
     padding-right: 0;
     padding-left: 0;
